--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>My Website</title>
   </head>
   <body></body>
+  <!-- This is the navbar section-->
+  <div class="navbar">
+    <div>Beden Tengah</div>
+    <div>Home</div>
+    <div>About</div>
+    <div>Contacts</div>
+  </div>
+
   <h1>PORTFOLIO</h1>
   <script src="script.js"></script>
 </html>
