--- a/index.html
+++ b/index.html
@@ -6,15 +6,60 @@
     <link rel="stylesheet" href="./style.css" />
     <title>My Website</title>
   </head>
-  <body></body>
-  <!-- This is the navbar section-->
-  <div class="navbar">
-    <div>Beden Tengah</div>
-    <div>Home</div>
-    <div>About</div>
-    <div>Contacts</div>
-  </div>
-
-  <h1>PORTFOLIO</h1>
-  <script src="script.js"></script>
+  <body>
+    <script src="script.js"></script>
+    <!-- Navbar Section-->
+    <div class="navbar">
+      <div>Beden Tengah</div>
+      <div>Home</div>
+      <div>About</div>
+      <div>Contacts</div>
+    </div>
+    <!-- The Introduction Section -->
+    <h1>INTRODUCTION</h1>
+    <p>Greetings!</p>
+    <p>
+      My name is Beden Tengah and i am currently a student at Moringa School
+      studying Software Enginering.
+    </p>
+    <!-- Projects section -->
+    <h3>MY PROJECTS</h3>
+    <p>
+      Basically this is my first software engineering project. However, am
+      planning to work on a couple as i delve deep into this journey.
+    </p>
+    <h4>My Planned Projects</h4>
+    <ul>
+      <li>Develop an app that will allow linking buyers and sellers.</li>
+      <li>
+        Developing a security mechanism that can help combat cyber-security.
+      </li>
+    </ul>
+    <!-- Hobbies Section -->
+    <h3>MY HOBBIES</h3>
+    <ul>
+      <li>Football lover</li>
+      <li>Travelling</li>
+      <li>Research</li>
+      <li>Coding</li>
+    </ul>
+    <br />
+    <!-- About -->
+    <h3>ABOUT</h3>
+    <img src="" loading />
+    <p>
+      I am an entreprenuer and a style influencer by default. My styling and
+      sense of fashion has been appreciated by many; something to be very proud
+      of. I have majored in Internantional relations and diplomacy. I love tech
+      and enjoy coding.
+    </p>
+    <!-- Contacts Info -->
+    <h3>CONTACTS</h3>
+    <div class="footer">
+      Email:rexbeden@gmail.com
+      <a href="https://ke.linkedin.com/in/beden-tengah-2a3b2520b">Linkedin</a>
+      <a href="https://twitter.com/home">Twitter</a>
+      <p>Tel:+254768378814</p>
+    </div>
+  </body>
 </html>
