--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
   <body>
     <script src="script.js"></script>
     <!-- Navbar Section-->
-    <div class="navbar">
-      <div>Beden Tengah</div>
-      <div>Home</div>
-      <div>About</div>
-      <div>Contacts</div>
+     <div class="navbar"></div>
+     <h2 id="text">Beden Tengah</h2>
+      <ul>
+        <li>HOME</li>
+        <li>ABOUT</li>
+        <li>CONTACTS</li>
+      </ul>
     </div>
+    <br>
     <!-- The Introduction Section -->
-    <h1>INTRODUCTION</h1>
+    <h3>INTRODUCTION</h3>
     <p>Greetings!</p>
     <p>
       My name is Beden Tengah and i am currently a student at Moringa School
@@ -44,9 +47,9 @@
       <li>Coding</li>
     </ul>
     <br />
-    <!-- About -->
+<!-- About -->
     <h3>ABOUT</h3>
-    <img src="" loading />
+    <img src="./images" alt="loading" />
     <p>
       I am an entreprenuer and a style influencer by default. My styling and
       sense of fashion has been appreciated by many; something to be very proud
@@ -54,12 +57,23 @@
       and enjoy coding.
     </p>
     <!-- Contacts Info -->
+    <div class="footer"></div>
     <h3>CONTACTS</h3>
-    <div class="footer">
-      Email:rexbeden@gmail.com
-      <a href="https://ke.linkedin.com/in/beden-tengah-2a3b2520b">Linkedin</a>
-      <a href="https://twitter.com/home">Twitter</a>
-      <p>Tel:+254768378814</p>
+      <ul>
+        <li>Email:rexbeden@gmail.com</li>
+        <li>
+            <a href="https://ke.linkedin.com/in/beden-tengah-2a3b2520b">Linkedin</a>
+        </li>
+        <li>
+            <a href="https://twitter.com/home">Twitter</a>
+        </li>
+        <li>
+            <p>Tel:+254768378814</p>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
+
+
+    
