--- a/index.html
+++ b/index.html
@@ -4,33 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="./style.css" />
-    <title>My Website</title>
+    <title>MY WEBSITE</title>
   </head>
   <body>
     <script src="script.js"></script>
     <!-- Navbar Section-->
-     <div class="navbar"></div>
-     <h2 id="text">Beden Tengah</h2>
-      <ul>
-        <li>HOME</li>
+    <div class="navbar">
+      <h2>Beden Tengah</h2>
+      <ul id="bar">
+        <li></i>HOME</li>
         <li>ABOUT</li>
         <li>CONTACTS</li>
       </ul>
     </div>
-    <br>
     <!-- The Introduction Section -->
     <h3>INTRODUCTION</h3>
+    <div class="intro">
     <p>Greetings!</p>
     <p>
       My name is Beden Tengah and i am currently a student at Moringa School
       studying Software Enginering.
     </p>
+    </div>
     <!-- Projects section -->
     <h3>MY PROJECTS</h3>
-    <p>
-      Basically this is my first software engineering project. However, am
-      planning to work on a couple as i delve deep into this journey.
+    <p class="proj">
+      This is my first software engineering project. However, am determined to
+      work on a couple as i delve deep into this journey.
     </p>
+    <div class="plan">
     <h4>My Planned Projects</h4>
     <ul>
       <li>Develop an app that will allow linking buyers and sellers.</li>
@@ -38,42 +40,42 @@
         Developing a security mechanism that can help combat cyber-security.
       </li>
     </ul>
+    </div>
     <!-- Hobbies Section -->
     <h3>MY HOBBIES</h3>
-    <ul>
+    <ul class="hobbies">
       <li>Football lover</li>
       <li>Travelling</li>
       <li>Research</li>
       <li>Coding</li>
     </ul>
     <br />
-<!-- About -->
+    <!-- About -->
     <h3>ABOUT</h3>
-    <img src="./images" alt="loading" />
-    <p>
-      I am an entreprenuer and a style influencer by default. My styling and
-      sense of fashion has been appreciated by many; something to be very proud
-      of. I have majored in Internantional relations and diplomacy. I love tech
-      and enjoy coding.
-    </p>
-    <!-- Contacts Info -->
-    <div class="footer"></div>
-    <h3>CONTACTS</h3>
-      <ul>
+    <div class="about">
+      <img src="./images" alt="loading" />
+      <p>I am an entreprenuer and a style influencer by default.My styling and sense of fashion has been appreciated by many; something to be very
+        proud of.I have majored in Internantional relations and diplomacy. I
+        love tech and enjoy coding.
+      </p>
+    </div>
+    <!-- Footer -->
+    <div id="contacts">
+      <h3>CONTACTS</h3>
+      <ul div class="footer">
         <li>Email:rexbeden@gmail.com</li>
         <li>
-            <a href="https://ke.linkedin.com/in/beden-tengah-2a3b2520b">Linkedin</a>
+          <a href="https://ke.linkedin.com/in/beden-tengah-2a3b2520b"
+            >Linkedin</a
+          >
         </li>
         <li>
-            <a href="https://twitter.com/home">Twitter</a>
+          <a href="https://twitter.com/home">Twitter</a>
         </li>
         <li>
-            <p>Tel:+254768378814</p>
+          <p>Tel:+254768378814</p>
         </li>
       </ul>
     </div>
   </body>
 </html>
-
-
-    
