--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Projects section -->
     <h3>MY PROJECTS</h3>
     <p class="proj">
-      This is my first software engineering project. However, am determined to
+      This is my first software engineering project(portfolio). However, am determined to
       work on a couple as i delve deep into this journey.
     </p>
     <div class="plan">
